# MyFirstPlugin

./: .gitignore  CMakeLists.txt  README.md  journal.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
